เพิ่มการเก็บประวัติการทำงานของระบบให้กับโปรแกรม
